--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@hookform/resolvers": "^2.9.9",
+    "@splinetool/react-spline": "^2.2.3",
+    "@splinetool/runtime": "^0.9.132",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "mdb-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
